--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>1.0.21</version>
+        <version>1.0.22</version>
     </parent>
 
 
@@ -207,7 +207,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>1.0.21</version>
+            <version>1.0.22</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jade4j</artifactId>
@@ -341,9 +341,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Better UI for transmission plugin: showing progress of upload related to ratio with a different
-                        progress bar
-                        Add option to auto delete finished torrents for transmission plugin
+                        Add possibility to upload files and create new folders for the Hard disk plugin
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
